--- a/04-deployment/homework/starter.ipynb
+++ b/04-deployment/homework/starter.ipynb
@@ -40,6 +40,11 @@
     "year = 2021\n",
     "month = 2\n",
     "\n",
+    "# to parametrise \n",
+    "# import sys\n",
+    "# year = int(sys.argv[1])\n",
+    "# month = int(sys.argv[2])\n",
+    "\n",
     "input_file = f'https://nyc-tlc.s3.amazonaws.com/trip+data/fhv_tripdata_{year:04d}-{month:02d}.parquet'\n",
     "output_file = f'output/fhv_tripdata_{year:04d}-{month:02d}.parquet'"
    ]
@@ -178,7 +183,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.2 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -192,7 +197,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.2"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
